@@ -21,6 +21,7 @@
 #define GUMPS_VGA	"static/gumps.vga"
 #define FONTS_VGA	"static/fonts.vga"
 #define SPRITES_VGA     "static/sprites.vga"
+#define MAINSHP_FLX     "static/mainshp.flx"
 #define SHPDIMS		"static/shpdims.dat"
 #define TFA		"static/tfa.dat"
 #define WGTVOL		"static/wgtvol.dat"		
@@ -55,6 +56,7 @@
 #define GUMPS_VGA	"static\\gumps.vga"
 #define FONTS_VGA	"static\\fonts.vga"
 #define SPRITES_VGA     "static\\sprites.vga"
+#define MAINSHP_FLX     "static\\mainshp.flx"
 #define SHPDIMS		"static\\shpdims.dat"
 #define TFA		"static\\tfa.dat"
 #define WGTVOL		"static\\wgtvol.dat"		
